--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,7 @@
       /****************************
        * METAS
        ****************************/
-      function renderGoals()
+      function renderGoals()<0x04><0x02>
 
 {
         const container = document.getElementById("goalsList");
