--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
     <script>
       // Configuração do Firebase
       const firebaseConfig = {
-        apiKey: "SuaChaveFirebaseAqui",
+        apiKey: "AIzaSyBVCtmkrtBtVl3A4xcYxckHFFa_eHxiQ0w",
         authDomain: "gerenciador-financeiro-6d8c2.firebaseapp.com",
         projectId: "gerenciador-financeiro-6d8c2",
         storageBucket: "gerenciador-financeiro-6d8c2.appspot.com",
@@ -1139,7 +1139,7 @@
       }
 
       async function askGemini(question) {
-        const apiKey = 'SUA_CHAVE_API_AQUI'; // Substitua pela sua chave de API do Google Cloud
+        const apiKey = 'AIzaSyDHoCnJamvhgRDNdCUfQCsazCY5AFBftG0'; // Substitua pela sua chave de API do Google Cloud
         const url = `https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=${apiKey}`;
         const requestBody = {
           contents: [{
